--- a/UI_Gestion/Web.config
+++ b/UI_Gestion/Web.config
@@ -7,7 +7,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="db" connectionString="Data Source=JOSE-CORONEL\SQLEXPRESS;Initial Catalog=Portales;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="db" connectionString="Server=DESKTOP-70GJQOI\JOSECORONELDEV;Database=Portales;User Id=sa;Password=123456;" providerName="System.Data.SqlClient" />
     <add name="UI_GestionContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UI_GestionContext-20200427145530; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UI_GestionContext-20200427145530.mdf" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
@@ -22,15 +22,16 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1">
-      <assemblies>
-        <add assembly="CrystalDecisions.Web, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-        <add assembly="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-        <add assembly="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-        <add assembly="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-        <add assembly="CrystalDecisions.ReportAppServer.Controllers, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-        <add assembly="CrystalDecisions.ReportAppServer.DataDefModel, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-        <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-      <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/></assemblies>
+		<assemblies>
+			<add assembly="CrystalDecisions.Web, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+			<add assembly="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+			<!--<add assembly="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>-->
+			<add assembly="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+			<!--<add assembly="CrystalDecisions.ReportAppServer.Controllers, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>-->
+			<!--<add assembly="CrystalDecisions.ReportAppServer.DataDefModel, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>-->
+			<add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+			<add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
+		</assemblies>
     </compilation>
     <httpRuntime targetFramework="4.6.1"/>
     <pages>
